# recsys4daos

./: .gitignore  CITATION.cff  README.md  pyproject.toml
data/: README.md
data/Decentraland/: proposals.csv
data/cache/: baseline.csv  perfect.csv
data/output/: daos-info.json  daos-to-run.json
nbout/Aave - Aavegotchi/: 01_explore.ipynb  10_baseline.ipynb  11_CF_KNN.ipynb  12_PLN_Similarity.ipynb  20_microsoft_tuning.ipynb  90_results.ipynb
nbout/Aura Finance/: 01_explore.ipynb  10_baseline.ipynb  11_CF_KNN.ipynb  12_PLN_Similarity.ipynb  20_microsoft_tuning.ipynb  90_results.ipynb
nbout/Balancer/: 01_explore.ipynb  10_baseline.ipynb  11_CF_KNN.ipynb  12_PLN_Similarity.ipynb  20_microsoft_tuning.ipynb
nbout/Bancor/: 01_explore.ipynb  10_baseline.ipynb
nbout/Bent Finance/: 01_explore.ipynb  10_baseline.ipynb
nbout/DAOSquare Grants/: 01_explore.ipynb  10_baseline.ipynb
nbout/DEAD FoundationsDAO/: 01_explore.ipynb  10_baseline.ipynb  11_CF_KNN.ipynb  12_PLN_Similarity.ipynb  20_microsoft_tuning.ipynb  90_results.ipynb
nbout/Decentraland/: 01_explore.ipynb  10_baseline.ipynb  11_CF_KNN.ipynb  12_PLN_Similarity.ipynb  20_microsoft_tuning.ipynb  90_results.ipynb
nbout/Frax/: 01_explore.ipynb  10_baseline.ipynb  11_CF_KNN.ipynb  12_PLN_Similarity.ipynb  20_microsoft_tuning.ipynb  90_results.ipynb
nbout/Genesis Alpha/: 01_explore.ipynb  10_baseline.ipynb  11_CF_KNN.ipynb  12_PLN_Similarity.ipynb  20_microsoft_tuning.ipynb  90_results.ipynb
nbout/Good Morning News/: 01_explore.ipynb  10_baseline.ipynb
nbout/HUWA-DAO/: 01_explore.ipynb  10_baseline.ipynb  11_CF_KNN.ipynb  12_PLN_Similarity.ipynb  20_microsoft_tuning.ipynb  90_results.ipynb
nbout/HausDao Warcamp/: 01_explore.ipynb  10_baseline.ipynb
notebooks/: .gitattributes  01_explore.ipynb  10_baseline.ipynb  11_CF_KNN.ipynb  11_microsoft_tuning.ipynb  12_PLN_Similarity.ipynb  12_microsoft_results.ipynb  13_CF_KNN.ipynb  14_PLN_Similarity.ipynb  20_microsoft_tuning.ipynb  21_microsoft_results.ipynb  90_results.ipynb  all_results.ipynb  gen_csv.ipynb  gen_input.ipynb  paths.py  run_all.ipynb  run_one.ipynb  select_daos.ipynb
(+410 files in other folders)
